## NEWS to package MKdescr
###############################################################################

###########################################################
## Version 0.8
###########################################################
- updated function illustrate.boxplot
- corrected vignette entry (detected by a new CRAN check)


###########################################################
## Version 0.7
###########################################################
- added functions to illustrate quantiles and boxplots.
- updated links from http to https


###########################################################
## Version 0.6
###########################################################
- changed behaviour of CV functions in case of NA values to correct a minor
  bug.
- extended medCV and iqrCV by argument constant and type.
- introduced functions zscore, medZscore and iqrZscore to compute z-scores
- introduced function SMD for calculating the standardized mean difference
  with and without equal variances


###########################################################
## Version 0.5
###########################################################
- added references to the description and vignette
- function simCorVars gained arguments to set mean and sd of the simulated
  variables.


###########################################################
## Version 0.4
###########################################################
- extended description in DESCRIPTION file
- improved documentation of CV and SNR


###########################################################
## Version 0.3
###########################################################
- slightly changed the title of the package and extended the description


###########################################################
## Version 0.2
###########################################################
- added functions skippedMean and skippedSD for computing Huber-type
  skipped mean and SD.

