@@ -14,6 +14,10 @@ export(simCorVars,
        scale_x_glog10,
        scale_y_glog2,
        scale_x_glog2,
+       scale_y_log,
+       scale_x_log,
+       scale_y_log2,
+       scale_x_log2,
        scale_y_neglog,
        scale_x_neglog,
        scale_y_neglog10,
@@ -22,6 +26,7 @@ export(simCorVars,
        scale_x_neglog2,
        melt.long,
        fiveNS,
+       sevenNS,
        IQrange,
        sIQR,
        meanAD,
