@@ -7,6 +7,8 @@
 ###########################################################
 - updated function illustrate.boxplot
 - corrected vignette entry (detected by a new CRAN check)
+- added scale_*_log and scale_*_log2 (* = x, y)
+- added Tukey's seven number summary using quantiles
 
 
 ###########################################################
